<?xml version="1.0"?>
<package format="2">
  <name>mushr_gprm</name>
  <version>0.9.0</version>
  <description>The mushr_gprm package</description>

  <maintainer email="schifm2@cs.washington.edu">Markus Schiffer</maintainer>

  <license>BSD-3</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>tf2</build_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>tf2</build_export_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>tf2</exec_depend>
</package>
